// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Atorvastatin Integration Test parses atorvastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "2": [
          {
            "components": [
              {
                "atoms": [
                  "C",
                  "N",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                ],
                "type": "linear",
              },
              {
                "atoms": "c",
                "attachments": {},
                "bonds": [
                  null,
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
            ],
            "type": "molecule",
          },
        ],
        "3": [
          {
            "atoms": "c",
            "attachments": {},
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 2,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "4": [
          {
            "atoms": "c",
            "attachments": {
              "4": [
                {
                  "atoms": [
                    "F",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 2,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "5": "n",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "[C@@H]",
        "C",
        "[C@@H]",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "5": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "7": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Atorvastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 5 });
export const v5 = v4.substitute(5, 'n');
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(1, v7);
export const v9 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v10 = Molecule([v8, v9]);
export const v11 = v5.attach(2, v10);
export const v12 = Ring({ atoms: 'c', size: 6, ringNumber: 2, leadingBond: '-' });
export const v13 = v11.attach(3, v12);
export const v14 = Ring({ atoms: 'c', size: 6, ringNumber: 2, leadingBond: '-' });
export const v15 = Linear(['F']);
export const v16 = v14.attach(4, v15);
export const v17 = v13.attach(4, v16);
export const v18 = Linear(['C', 'C', '[C@@H]', 'C', '[C@@H]', 'C', 'C', 'O']);
export const v19 = Linear(['O']);
export const v20 = v18.attach(3, v19);
export const v21 = Linear(['O']);
export const v22 = v20.attach(5, v21);
export const v23 = Linear(['O'], ['=']);
export const v24 = v22.attach(7, v23);
export const v25 = Molecule([v3, v17, v24]);"
`;

exports[`Simvastatin Integration Test parses simvastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "9": [
              {
                "components": [
                  {
                    "atoms": [
                      "C",
                      "C",
                    ],
                    "attachments": {},
                    "bonds": [
                      null,
                      null,
                    ],
                    "type": "linear",
                  },
                  {
                    "atoms": "C",
                    "attachments": {
                      "3": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            null,
                          ],
                          "type": "linear",
                        },
                      ],
                      "5": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            "=",
                          ],
                          "type": "linear",
                        },
                      ],
                    },
                    "bonds": [
                      null,
                      null,
                      null,
                      null,
                      null,
                      null,
                    ],
                    "offset": 0,
                    "ringNumber": 3,
                    "size": 6,
                    "substitutions": {
                      "6": "O",
                    },
                    "type": "ring",
                  },
                ],
                "type": "molecule",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "components": [
                  {
                    "atoms": [
                      "C",
                      "C",
                    ],
                    "attachments": {},
                    "bonds": [
                      null,
                      null,
                    ],
                    "type": "linear",
                  },
                  {
                    "atoms": "C",
                    "attachments": {
                      "3": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            null,
                          ],
                          "type": "linear",
                        },
                      ],
                      "5": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            "=",
                          ],
                          "type": "linear",
                        },
                      ],
                    },
                    "bonds": [
                      null,
                      null,
                      null,
                      null,
                      null,
                      null,
                    ],
                    "offset": 0,
                    "ringNumber": 3,
                    "size": 6,
                    "substitutions": {
                      "6": "O",
                    },
                    "type": "ring",
                  },
                ],
                "type": "molecule",
              },
            ],
          },
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Simvastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(3, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(4, v4);
export const v6 = Ring({ atoms: 'C', size: 10, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v7 = Linear(['C']);
export const v8 = v6.attach(3, v7);
export const v9 = Linear(['C']);
export const v10 = v8.attach(8, v9);
export const v11 = Linear(['C', 'C']);
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v13 = v12.substitute(6, 'O');
export const v14 = Linear(['O']);
export const v15 = v13.attach(3, v14);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(5, v16);
export const v18 = Molecule([v11, v17]);
export const v19 = v10.attach(9, v18);
export const v20 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 4, bonds: [null, '=', null, null, null, null], leadingBond: '=' });
export const v21 = v19.fuse(4, v20);
export const v22 = Molecule([v5, v21]);"
`;

exports[`Rosuvastatin Integration Test parses rosuvastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "3": [
          {
            "atoms": "c",
            "attachments": {
              "4": [
                {
                  "atoms": [
                    "F",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 2,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "5": [
          {
            "atoms": [
              "C",
              "C",
              "[C@@H]",
              "C",
              "[C@@H]",
              "C",
              "C",
              "O",
            ],
            "attachments": {
              "3": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
              "5": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
              "7": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    "=",
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              "/",
              "=",
              "/",
              null,
              null,
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {
        "2": "n",
        "4": "n",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "N",
        "S",
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Rosuvastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6, branchDepths: [0, 0, 0, 1, 1, 2] });
export const v5 = v4.substitute(2, 'n');
export const v6 = v5.substitute(4, 'n');
export const v7 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(4, v8);
export const v10 = v6.attach(3, v9, { sibling: false });
export const v11 = Linear(['C', 'C', '[C@@H]', 'C', '[C@@H]', 'C', 'C', 'O'], ['/', '=', '/', null, null, null, null, null]);
export const v12 = Linear(['O']);
export const v13 = v11.attach(3, v12);
export const v14 = Linear(['O']);
export const v15 = v13.attach(5, v14);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(7, v16);
export const v18 = v10.attach(5, v17, { sibling: false });
export const v19 = Linear(['N', 'S', 'C']);
export const v20 = Linear(['C']);
export const v21 = v19.attach(1, v20);
export const v22 = Linear(['O'], ['=']);
export const v23 = v21.attach(2, v22);
export const v24 = Linear(['O'], ['=']);
export const v25 = v23.attach(2, v24);
export const v26 = Molecule([v3, v18, v25]);"
`;

exports[`Pravastatin Integration Test parses pravastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "9": [
              {
                "atoms": [
                  "C",
                  "C",
                  "[C@@H]",
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "3": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        null,
                      ],
                      "type": "linear",
                    },
                  ],
                  "5": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 10,
          "substitutions": {
            "1": "[C@H]",
            "10": "[C@H]",
            "3": "[C@H]",
            "8": "[C@H]",
            "9": "[C@H]",
          },
          "type": "ring",
        },
        {
          "atoms": "[C@H]",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                  "C",
                  "[C@@H]",
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "3": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        null,
                      ],
                      "type": "linear",
                    },
                  ],
                  "5": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "1": "C",
            "2": "C",
            "3": "C",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Pravastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(3, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(4, v4);
export const v6 = Ring({ atoms: 'C', size: 10, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v7 = v6.substitute(1, '[C@H]');
export const v8 = v7.substitute(3, '[C@H]');
export const v9 = v8.substitute(8, '[C@H]');
export const v10 = v9.substitute(9, '[C@H]');
export const v11 = v10.substitute(10, '[C@H]');
export const v12 = Linear(['O']);
export const v13 = v11.attach(3, v12);
export const v14 = Linear(['C']);
export const v15 = v13.attach(8, v14);
export const v16 = Linear(['C', 'C', '[C@@H]', 'C', 'C', 'O']);
export const v17 = Linear(['O']);
export const v18 = v16.attach(3, v17);
export const v19 = Linear(['O'], ['=']);
export const v20 = v18.attach(5, v19);
export const v21 = v15.attach(9, v20);
export const v22 = Ring({ atoms: '[C@H]', size: 6, ringNumber: 2, offset: 4, bonds: [null, '=', null, null, null, null], leadingBond: '=' });
export const v23 = v21.fuse(4, v22);
export const v24 = Molecule([v5, v23]);"
`;

exports[`Lovastatin Integration Test parses lovastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "9": [
              {
                "components": [
                  {
                    "atoms": [
                      "C",
                      "C",
                    ],
                    "attachments": {},
                    "bonds": [
                      null,
                      null,
                    ],
                    "type": "linear",
                  },
                  {
                    "atoms": "C",
                    "attachments": {
                      "3": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            null,
                          ],
                          "type": "linear",
                        },
                      ],
                      "5": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            "=",
                          ],
                          "type": "linear",
                        },
                      ],
                    },
                    "bonds": [
                      null,
                      null,
                      null,
                      null,
                      null,
                      null,
                    ],
                    "offset": 0,
                    "ringNumber": 3,
                    "size": 6,
                    "substitutions": {
                      "6": "O",
                    },
                    "type": "ring",
                  },
                ],
                "type": "molecule",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "components": [
                  {
                    "atoms": [
                      "C",
                      "C",
                    ],
                    "attachments": {},
                    "bonds": [
                      null,
                      null,
                    ],
                    "type": "linear",
                  },
                  {
                    "atoms": "C",
                    "attachments": {
                      "3": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            null,
                          ],
                          "type": "linear",
                        },
                      ],
                      "5": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            "=",
                          ],
                          "type": "linear",
                        },
                      ],
                    },
                    "bonds": [
                      null,
                      null,
                      null,
                      null,
                      null,
                      null,
                    ],
                    "offset": 0,
                    "ringNumber": 3,
                    "size": 6,
                    "substitutions": {
                      "6": "O",
                    },
                    "type": "ring",
                  },
                ],
                "type": "molecule",
              },
            ],
          },
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Lovastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(3, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(4, v4);
export const v6 = Ring({ atoms: 'C', size: 10, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v7 = Linear(['C']);
export const v8 = v6.attach(3, v7);
export const v9 = Linear(['C']);
export const v10 = v8.attach(8, v9);
export const v11 = Linear(['C', 'C']);
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v13 = v12.substitute(6, 'O');
export const v14 = Linear(['O']);
export const v15 = v13.attach(3, v14);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(5, v16);
export const v18 = Molecule([v11, v17]);
export const v19 = v10.attach(9, v18);
export const v20 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 4, bonds: [null, '=', null, null, null, null], leadingBond: '=' });
export const v21 = v19.fuse(4, v20);
export const v22 = Molecule([v5, v21]);"
`;

exports[`Fluvastatin Integration Test parses fluvastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "2": [
          {
            "components": [
              {
                "atoms": [
                  "C",
                  "N",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                ],
                "type": "linear",
              },
              {
                "components": [
                  {
                    "atoms": "c",
                    "attachments": {},
                    "bonds": [
                      null,
                      null,
                      null,
                      null,
                      null,
                      null,
                    ],
                    "offset": 0,
                    "ringNumber": 2,
                    "size": 6,
                    "substitutions": {},
                    "type": "ring",
                  },
                  {
                    "atoms": [
                      "C",
                    ],
                    "attachments": {
                      "1": [
                        {
                          "atoms": [
                            "O",
                          ],
                          "attachments": {},
                          "bonds": [
                            "=",
                          ],
                          "type": "linear",
                        },
                      ],
                    },
                    "bonds": [],
                    "type": "linear",
                  },
                ],
                "type": "molecule",
              },
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [],
                "type": "linear",
              },
            ],
            "type": "molecule",
          },
        ],
        "3": [
          {
            "atoms": "c",
            "attachments": {
              "4": [
                {
                  "atoms": [
                    "F",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 2,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "1": "n",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        "=",
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fluvastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 5 });
export const v5 = v4.substitute(1, 'n');
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(1, v7);
export const v9 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v10 = Linear(['C']);
export const v11 = Linear(['O'], ['=']);
export const v12 = v10.attach(1, v11);
export const v13 = Molecule([v9, v12]);
export const v14 = Linear(['O']);
export const v15 = Molecule([v8, v13, v14]);
export const v16 = v5.attach(2, v15);
export const v17 = Ring({ atoms: 'c', size: 6, ringNumber: 2, leadingBond: '-' });
export const v18 = Linear(['F']);
export const v19 = v17.attach(4, v18);
export const v20 = v16.attach(3, v19);
export const v21 = Linear(['O']);
export const v22 = v20.attach(4, v21);
export const v23 = Linear(['C', 'C'], ['='], {}, '/');
export const v24 = Ring({ atoms: 'c', size: 6, leadingBond: '/' });
export const v25 = Molecule([v3, v22, v23, v24]);"
`;

exports[`Ezetimibe Integration Test parses ezetimibe 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "[C@H]",
          "attachments": {
            "2": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "[C@@H]",
            "4": "O",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": "c",
      "attachments": {
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 4,
      "size": 6,
      "substitutions": {
        "1": "N",
      },
      "type": "ring",
    },
    {
      "atoms": "c",
      "attachments": {
        "4": [
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 5,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ezetimibe Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: '[C@H]', size: 5, branchDepths: [0, 0, 0, 1, 1] });
export const v3 = v2.substitute(2, '[C@@H]');
export const v4 = v3.substitute(4, 'O');
export const v5 = Linear(['O']);
export const v6 = v4.attach(2, v5, { sibling: true });
v6.metaUseInterleavedCodegen = true;
v6.metaPositions = [1, 2, 4, 5, 6];
v6.metaStart = 1;
v6.metaEnd = 6;
export const v7 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(4, v8);
v9.metaPositions = [7, 8, 9, 10, 12, 13];
v9.metaStart = 7;
v9.metaEnd = 13;
v6.metaSequentialRings = [v9];
v6.metaAllPositions = [1, 2, 4, 5, 6, 7, 8, 9, 10, 12, 13];
v6.metaBranchDepthMap = new Map([[1, 0], [2, 0], [4, 0], [5, 1], [6, 1], [7, 1], [8, 1], [9, 1], [10, 1], [12, 1], [13, 1]]);
v6.metaAtomValueMap = new Map([[1, '[C@H]'], [2, '[C@@H]'], [4, '[C@H]'], [5, 'O'], [6, '[C@H]'], [7, 'c'], [8, 'c'], [9, 'c'], [10, 'c'], [12, 'c'], [13, 'c']]);
export const v10 = Ring({ atoms: 'c', size: 6, ringNumber: 3 });
export const v11 = Linear(['O']);
export const v12 = v10.attach(4, v11);
export const v13 = Linear(['C']);
export const v14 = Linear(['O'], ['=']);
export const v15 = v13.attach(1, v14);
export const v16 = Ring({ atoms: 'C', size: 6, ringNumber: 4, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v17 = v16.substitute(1, 'N');
export const v18 = Ring({ atoms: 'c', size: 6, ringNumber: 5 });
export const v19 = Linear(['F']);
export const v20 = v18.attach(4, v19);
export const v21 = Molecule([v1, v6, v12, v15, v17, v20]);"
`;

exports[`Fenofibrate Integration Test parses fenofibrate 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "O",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
        "5": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "4": [
          {
            "atoms": [
              "Cl",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fenofibrate Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'O', 'C', 'C', 'O']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(4, v4);
export const v6 = Linear(['C']);
export const v7 = v5.attach(5, v6);
export const v8 = Linear(['C']);
export const v9 = v7.attach(5, v8);
export const v10 = Ring({ atoms: 'c', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v11 = Linear(['C']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(1, v12);
export const v14 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v15 = Linear(['Cl']);
export const v16 = v14.attach(4, v15);
export const v17 = Molecule([v9, v10, v13, v16]);"
`;

exports[`Gemfibrozil Integration Test parses gemfibrozil 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "4": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "5": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Gemfibrozil Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = Linear(['C']);
export const v4 = v2.attach(3, v3);
export const v5 = Linear(['C', 'C', 'C', 'C', 'C', 'O']);
export const v6 = Linear(['C']);
export const v7 = v5.attach(4, v6);
export const v8 = Linear(['C']);
export const v9 = v7.attach(4, v8);
export const v10 = Linear(['O'], ['=']);
export const v11 = v9.attach(5, v10);
export const v12 = Molecule([v1, v4, v11]);"
`;

exports[`Pitavastatin Integration Test parses pitavastatin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "3": [
          {
            "atoms": "c",
            "attachments": {
              "4": [
                {
                  "atoms": [
                    "F",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 2,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "5": [
          {
            "atoms": [
              "C",
              "C",
              "[C@@H]",
              "C",
              "[C@@H]",
              "C",
              "C",
              "O",
            ],
            "attachments": {
              "3": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
              "5": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    null,
                  ],
                  "type": "linear",
                },
              ],
              "7": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    "=",
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              "/",
              "=",
              "/",
              null,
              null,
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {
        "2": "n",
        "4": "n",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "N",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 3,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Pitavastatin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6, branchDepths: [0, 0, 0, 1, 1, 2] });
export const v5 = v4.substitute(2, 'n');
export const v6 = v5.substitute(4, 'n');
export const v7 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(4, v8);
export const v10 = v6.attach(3, v9, { sibling: false });
export const v11 = Linear(['C', 'C', '[C@@H]', 'C', '[C@@H]', 'C', 'C', 'O'], ['/', '=', '/', null, null, null, null, null]);
export const v12 = Linear(['O']);
export const v13 = v11.attach(3, v12);
export const v14 = Linear(['O']);
export const v15 = v13.attach(5, v14);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(7, v16);
export const v18 = v10.attach(5, v17, { sibling: false });
export const v19 = Linear(['N', 'C']);
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(2, v20);
export const v22 = Ring({ atoms: 'C', size: 3, ringNumber: 3 });
export const v23 = Molecule([v3, v18, v21, v22]);"
`;
